# logbook

./: .gitignore  Pipfile  README.md  meson.build
data/: gschema.xml
logbook/: application.py  entry_item.py  entry_list.py  headerbar.py  journal_entries.py  journal_manager.py  logbook.in  main.py  meson.build  window.py
